--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,11 @@
-body {
+@import "components/setup";
+
+.wrapper {
+    margin: 0 auto;
+    max-width: 1140px;
     background-color: crimson;
+}
+
+body {
+    
 }
