--- a/styles/components/_base.scss
+++ b/styles/components/_base.scss
@@ -9,7 +9,6 @@ html {
 body {
     max-width: 1920px;
     margin: 0 auto;
-    background-color: #f7f7ff;
 }
 
 h1 {
@@ -32,9 +31,17 @@ h4 {
     padding: 0px;
 }
 
+img {
+    width: 100%;
+}
+
 blockquote {
     margin: 0px;
     padding: 0px;
+}
+
+fieldset {
+    border: none;
 }
 
 nav {
@@ -62,7 +69,3 @@ p {
     padding: 0px;
 }
 
-.wrapper {
-    max-width: 940px;
-    margin: 0 auto;
-}
