--- a/styles/components/_guitarGen.scss
+++ b/styles/components/_guitarGen.scss
@@ -16,7 +16,6 @@
 }
 
 .guitar__generator label {
-    display: inline-block;
     margin-bottom: 50px;
     padding: 10px 40px;
     border-radius: 25px;
@@ -34,6 +33,7 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     flex-wrap: wrap;
     width: 50%;
 }
@@ -42,6 +42,7 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     flex-wrap: wrap;
     width: 65%; 
 }
@@ -50,6 +51,7 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     flex-wrap: wrap;
     width: 90%; 
 }
@@ -74,4 +76,25 @@
 .classAdd {
     color: #f7f7ff;
     border: 3px solid #f7f7ff;
+}
+
+@media (max-width: 792px) {
+    .guitar__Genre__choices {
+        width: 30%;
+        flex-direction: column;
+    }
+} 
+
+@media (max-width: 745px) {
+    .guitar__skill__choices {
+        width: 30%;
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 664px) {
+    .guitar__price__choices {
+        width: 30%;
+        flex-direction: column;
+    }
 }
