--- a/styles/style.css
+++ b/styles/style.css
@@ -230,6 +230,15 @@ h1 {
   border: 3px solid #ea1821;
   color: #f7f7ff; }
 
+@media (max-width: 870px) {
+  header {
+    background-image: none;
+    background-color: white; } }
+
+@media (max-width: 790px) {
+  .generator__landing h2 {
+    margin-bottom: 100px; } }
+
 .generator {
   background-color: #12162D;
   color: #8b741f;
@@ -245,7 +254,6 @@ h1 {
   display: none; }
 
 .guitar__generator label {
-  display: inline-block;
   margin-bottom: 50px;
   padding: 10px 40px;
   border-radius: 25px;
@@ -267,6 +275,9 @@ h1 {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   width: 50%; }
@@ -279,6 +290,9 @@ h1 {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   width: 65%; }
@@ -291,6 +305,9 @@ h1 {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   width: 90%; }
@@ -315,6 +332,30 @@ h1 {
 .classAdd {
   color: #f7f7ff;
   border: 3px solid #f7f7ff; }
+
+@media (max-width: 792px) {
+  .guitar__Genre__choices {
+    width: 30%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; } }
+
+@media (max-width: 745px) {
+  .guitar__skill__choices {
+    width: 30%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; } }
+
+@media (max-width: 664px) {
+  .guitar__price__choices {
+    width: 30%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; } }
 
 .guitar-showcase {
   font-family: 'Righteous', cursive;
@@ -350,6 +391,10 @@ body {
 
 .wrapper {
   max-width: 940px;
+  margin: 0 auto; }
+
+.outerWrapper {
+  max-width: 1920px;
   margin: 0 auto; }
 
 footer {
