--- a/styles/style.scss
+++ b/styles/style.scss
@@ -13,8 +13,11 @@ body {
     margin: 0 auto;
 }
 
+.outerWrapper {
+    max-width: 1920px;
+    margin: 0 auto;
+}
+
 footer {
     text-align: center;
 }
-
-
